# docforge

./: .gitignore  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt  setup.py
docforge/: __init__.py  cli.py  utils.py
docforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docforge/commands/: __init__.py  compress.py  convert.py  encrypt.py  extract.py  merge.py  ocr.py  split.py  watermark.py
tests/: __init__.py  test_docforge.py
